<resources>
    <string name="app_name">FreeSpaceWar</string>
    <string name="space_war">Space War</string>
    <string name="game_is_loading"><![CDATA[-> Game is loading <-]]></string>
    <string name="play_war"><![CDATA[<- Play War ->]]></string>
    <string name="highscore_how_good"><![CDATA[<- Good War ->]]></string>
    <string name="change_life"><![CDATA[<- Change Life ->]]></string>
    <string name="start_war"><![CDATA[<- Start a War ->]]></string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="signin_other_error">Your login attempt failed.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="sign_in_explanation">Sign to save your progress and keep it synchronized across all your devices."</string>
    <string name="broken_war">Broken War</string>
    <string name="missed_enemies">Missed Enemies</string>
    <string name="just_zeros">00000000</string>
    <string name="shots_fired">Shots Fired</string>
    <string name="killed_enemies">Killed Enemies</string>
    <string name="highscore">Highscore</string>
    <string name="menu"><![CDATA[<- Menu ->]]></string>
    <string name="next_war"><![CDATA[<- Next War ->]]></string>
    <string name="high_score_table">HIGH_SCORE_TABLE</string>
    <string name="background_sound">Background Sound</string>
    <string name="shooting_sound">Shooting Sound</string>
    <string name="explosion_sound">Explosion Sound</string>
    <string name="back"><![CDATA[<- Back ->]]></string>
    <string name="save"><![CDATA[<- Save ->]]></string>

</resources>
