<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".settingsScreen.SettingsScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:fontFamily="@font/rm_regular"
        android:textColor="@color/colorFont"
        android:textSize="38sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <Switch
        android:id="@+id/background_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:checked="true"
        android:fontFamily="@font/rm_regular"
        android:text="@string/background_sound"
        android:textColor="@color/colorFont"
        android:trackTint="@color/colorFont" />

    <SeekBar
        android:id="@+id/background_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/colorFont" />

    <Switch
        android:id="@+id/shooting_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="@font/rm_regular"
        android:text="@string/shooting_sound"
        android:textColor="@color/colorFont"
        android:trackTint="@color/colorFont"
        android:layout_marginBottom="20dp" />

    <SeekBar
        android:id="@+id/shooting_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/colorFont" />

    <Switch
        android:id="@+id/explosion_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="@font/rm_regular"
        android:text="@string/explosion_sound"
        android:textColor="@color/colorFont"
        android:trackTint="@color/colorFont"
        android:layout_marginBottom="20dp"/>

    <SeekBar
        android:id="@+id/explosion_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/colorFont" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/rm_regular"
            android:text="@string/back"
            android:textColor="@color/colorFont"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/rm_regular"
            android:text="@string/save"
            android:textColor="@color/colorFont"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>