<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/high_score_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameOverScreen.GameOverScreen"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorBackground"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/broken_war_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/rm_regular"
                    android:text="@string/broken_war"
                    android:textColor="@color/colorFont"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/enemies_missed_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rm_regular"
                        android:text="@string/missed_enemies"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorFont"
                        android:textSize="14sp"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/missed_enemies_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rm_regular"
                        android:text="@string/just_zeros"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorFont" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shots_fired_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rm_regular"
                        android:text="@string/shots_fired"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorFont"
                        android:textSize="14sp"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/shots_fired_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rm_regular"
                        android:text="@string/just_zeros"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorFont" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/killed_enemies_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rm_regular"
                        android:text="@string/killed_enemies"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorFont"
                        android:textSize="14sp"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/killed_enemies_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rm_regular"
                        android:text="@string/just_zeros"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorFont" />
                </LinearLayout>

                <TextView
                    android:id="@+id/high_score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/rm_regular"
                    android:text="@string/highscore"
                    android:textColor="@color/colorFont"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/show_high_score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rm_regular"
                    android:text="@string/just_zeros"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorFont"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/over_menu_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorBackground"
                    android:fontFamily="@font/rm_regular"
                    android:onClick="onClick"
                    android:text="@string/menu"
                    android:textColor="@color/colorFont"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>